--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -5,6 +5,22 @@ html, body, #viewport  {
   padding: 0;
 }
 
+body {
+  background: black;
+}
+
+#loading {
+  color: white;
+  text-align: center;
+  font-size: 36px;
+  font-family: Monospace;
+  margin: auto;
+}
+
+body.loaded #loading {
+  display: none;
+}
+
 #hud {
   opacity: 0.6;
   border-radius 5px;
@@ -25,4 +41,39 @@ html, body, #viewport  {
 
 #hud #vr-toggle.active {
   display: block !important;
+}
+
+.spinner {
+  margin: 100px auto 0;
+  text-align: center;
+  display: inline-block;
+}
+
+.spinner > div {
+  width: 8px;
+  height: 8px;
+  background-color: #ffffff;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+  animation: bouncedelay 1.4s infinite ease-in-out;
+  /* Prevent first frame from flickering when animation starts */
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0.0) }
+  40% { -webkit-transform: scale(1.0) }
 }
