--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -28,7 +28,11 @@ html, body, #viewport  {
   position: relative;
   top: 50%;
   width: 720px;
-  height: 720px;
+
+  /* Make height of container slightly shorter to crop green bar bug */
+  height: 539px;
+  overflow: hidden;
+
   margin: auto;
   transform: translateY(-50%);
 }
