--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -21,7 +21,8 @@ html, body, #viewport  {
   width: 100%;
   position: absolute;
   opacity: 1;
-  transition: opacity 1s;
+  transition: opacity 2s;
+  z-index: 9999;
 }
 
 #video-container {
