add webit vendor prefix for transform

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -36,6 +36,7 @@ html, body, #viewport  {
 
   margin: auto;
   transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
 }
 
 .loading-videos {
