--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -22,7 +22,7 @@ html, body, #viewport  {
   position: absolute;
   opacity: 1;
   transition: opacity 2s;
-  z-index: 9999;
+  z-index: 10;
 }
 
 #video-container {
@@ -44,6 +44,23 @@ html, body, #viewport  {
   position: absolute;
   left: 0;
   top: 0;
+}
+
+#warning-toast {
+  z-index: 999;
+  position: absolute;
+  width: 300px;
+  height: 150px;
+  background: red;
+  text-align: center;
+  top: 0;
+  left: calc(50% - 150px);
+  transition: transform 1s;
+  transform: translateY(-160px);
+}
+
+#warning-toast.active {
+  transform: translateY(0);
 }
 
 body.loaded #loading {
@@ -71,39 +88,4 @@ body.loaded #loading {
 
 #hud #vr-toggle.active {
   display: block !important;
-}
-
-.spinner {
-  margin: 100px auto 0;
-  text-align: center;
-  display: inline-block;
-}
-
-.spinner > div {
-  width: 8px;
-  height: 8px;
-  background-color: #ffffff;
-
-  border-radius: 100%;
-  display: inline-block;
-  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
-  animation: bouncedelay 1.4s infinite ease-in-out;
-  /* Prevent first frame from flickering when animation starts */
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-.spinner .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-
-.spinner .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-
-@-webkit-keyframes bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0.0) }
-  40% { -webkit-transform: scale(1.0) }
 }
