correct CSS background path for warning popup. add warning popup image to loader array

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -52,7 +52,7 @@ html, body, #viewport  {
   width: 720px;
   height: 540px;
   text-align: center;
-  background-image: url("/assets/warning-popup.png");
+  background-image: url("../assets/warning-popup.png");
 
   top: 50%;
   transform: translateY(-50%);
